# Lele-Universal-Remote

./: CMakeLists.txt  README.md  sdkconfig.defaults
main/: CMakeLists.txt  app_display.c  app_display.h  app_gamepad.c  app_gamepad.h  app_games.c  app_games.h  app_mouse.c  app_mouse.h  battery_adc.c  battery_adc.h  ble_hid.c  ble_hid.h  buttons.c  buttons.h  custom_mode.c  custom_mode.h  main.c  mode_manager.c  mode_manager.h  ssd1306.c  ssd1306.h  web_control.c  web_control.h
remote_3d/: 3D_PCB1_2026-06-02.step  ProPrj_懒人神器_2026-06-02.epro2  aaa.STEP  壳.SLDASM  开关帽.SLDPRT  盖子^壳.STEP
